--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
     <main>
       <div class="top_image">
         <h1>Happy Birthday for Rene!!</h1>
-        <img
-          src="./img/top_image.JPG"
-          alt="Circular Image"
-          class="circle-image"
-        />
+        <img src="./img/Top.jpg" alt="Circular Image" class="circle-image" />
       </div>
 
       <ul class="img_box">
         <li class="scroll_up">
-          <img class="image" src="./img/gohan_1.JPG" alt="" />
+          <img class="image" src="./img/Top.jpg" alt="" />
           <div class="msg_box">
             <div class="msg_text">
               26才のお誕生日おめでとう<br />
