--- a/index.html
+++ b/index.html
@@ -2,33 +2,194 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>Happy Birthday!!</title>
+    <title>♡ Happy Birthday for Rene ♡</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header></header>
     <main>
       <div class="top_image">
-        <h1>Happy Birthday for Rene!!</h1>
+        <h1>&#x1f382; Happy Birthday for Rene &#x1f382;</h1>
         <img src="./img/Top.jpg" alt="Circular Image" class="circle-image" />
       </div>
 
+      <div class="prologue">
+        <ul class="img_box">
+          <li class="scroll_up">
+            <div class="msg_box">
+              <!-- <div class="msg_box-title">
+                <h2>Let's start!!</h2>
+              </div> -->
+              <div class="msg_text">
+                お誕生日おめでとう!!;<br />
+                れねがアルバム作ってくれたから<br />
+                得意なもので作ってみたの &#x1f970;<br />
+                喜んでくれるかな？？
+              </div>
+            </div>
+          </li>
+          <li class="scroll_up">
+            <h1>Let's start!!</h1>
+          </li>
+        </ul>
+      </div>
+
       <ul class="img_box">
+        <li class="scroll_right">
+          <img class="image" src="./img/2shot_1.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/food_1.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/food_2.jpg" alt="" />
+        </li>
         <li class="scroll_up">
-          <img class="image" src="./img/Top.jpg" alt="" />
           <div class="msg_box">
             <div class="msg_text">
-              26才のお誕生日おめでとう<br />
-              一緒に過ごさせてくれてありがとう♡<br />
-              今年のお誕生日は，スマホでお祝いするね
+              れねと一緒にいてよかったことは<br />
+              おいしいたべものを<br />
+              たくさんたべれること！<br />
+              なんて素敵な居酒屋なのだ<br />
+              また一緒に行こうね！
             </div>
           </div>
         </li>
+      </ul>
+
+      <ul class="img_box">
         <li class="scroll_left">
-          <img class="image" src="./img/gohan_2.JPG" alt="" />
+          <img class="image" src="./img/food_3.jpg" alt="" />
         </li>
         <li class="scroll_right">
-          <img class="image" src="./img/gohan_3.JPG" alt="" />
+          <img class="image" src="./img/food_4.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/1shot_2.jpg" alt="" />
+        </li>
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_text">
+              ここは ふたりのおきにいり？<br />
+              写真を見るだけで<br />
+              よだれが出ちゃう...<br />
+              なんばの街が恋しいね<br />
+              れねの変な写真も好きなんだ!笑
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_left">
+          <img class="image" src="./img/food_5.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/food_6.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/2shot_5.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/sleep_3.jpg" alt="" />
+        </li>
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_text">
+              まだまだ 難波！<br />
+              本当においしいお店がたっくさん<br />
+              帰るはずだったのに，プルコギ食べて<br />
+              帰れなくなったよね...<br />
+              でも，おいしかったからヨシ!!
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_rigt">
+          <img class="image" src="./img/1shot_1.jpg" alt="" />
+        </li>
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_text">
+              まだまだ 大阪！<br />
+              れねの地元 天王寺 に遊びに行ったよ<br />
+              はじめてのふたりのクリスマス<br />
+              一緒に買ったオーナメントは宝物だね
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_left">
+          <img class="image" src="./img/food_7.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/1shot_4.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/food_8.jpg" alt="" />
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_text">
+              お次は 京都!!<br />
+              半年間の下宿だったけど<br />
+              たくさん遊びに来てくれたね<br />
+              われらの第二の故郷だ<br />
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_right">
+          <img class="image" src="./img/sleep_1.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/sleep_2.jpg" alt="" />
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_text">
+              このときは 極寒の中<br />
+              おれが洗濯してたよね...<br />
+              あなたは布団から出なかった...
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_left">
+          <img class="image" src="./img/2shot_6.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/2shot_2.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/2shot_3.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/4shot_4.jpg" alt="" />
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_text">
+              卒業式にも来てくれた!<br />
+              研究室の友達に見つかったけど<br />
+              じつは嬉しかったのだよ<br />
+              たくさんの友達に<br />
+              会ってくれてありがとう<br />
+              意外とこのときの2人の写真<br />
+              多いんだよな &#x1f618;
+            </div>
+          </div>
         </li>
       </ul>
     </main>
