--- a/index.html
+++ b/index.html
@@ -36,13 +36,7 @@
 
       <ul class="img_box">
         <li class="scroll_right">
-          <img class="image" src="./img/2shot_1.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/food_1.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/food_2.jpg" alt="" />
+          <img class="image" src="./img/1.jpg" alt="" />
         </li>
         <li class="scroll_up">
           <div class="msg_box">
@@ -55,18 +49,15 @@
             </div>
           </div>
         </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/2.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/3.jpg" alt="" />
+        </li>
       </ul>
 
       <ul class="img_box">
-        <li class="scroll_left">
-          <img class="image" src="./img/food_3.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/food_4.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/1shot_2.jpg" alt="" />
-        </li>
         <li class="scroll_up">
           <div class="msg_box">
             <div class="msg_text">
@@ -74,25 +65,31 @@
               写真を見るだけで<br />
               よだれが出ちゃう...<br />
               なんばの街が恋しいね<br />
-              れねの変な写真も好きなんだ!笑
+              れねの変な写真も好きなんだ笑
             </div>
           </div>
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/4.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/5.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/6.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/7.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/8.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/9.jpg" alt="" />
         </li>
       </ul>
 
       <ul class="img_box">
-        <li class="scroll_left">
-          <img class="image" src="./img/food_5.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/food_6.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/2shot_5.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/sleep_3.jpg" alt="" />
-        </li>
         <li class="scroll_up">
           <div class="msg_box">
             <div class="msg_text">
@@ -104,21 +101,56 @@
             </div>
           </div>
         </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/10.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/11.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/12.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/13.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/14.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/15.jpg" alt="" />
+        </li>
+        <li class="scroll_right">
+          <img class="image" src="./img/16.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/17.jpg" alt="" />
+        </li>
       </ul>
 
       <ul class="img_box">
-        <li class="scroll_rigt">
-          <img class="image" src="./img/1shot_1.jpg" alt="" />
-        </li>
         <li class="scroll_up">
           <div class="msg_box">
             <div class="msg_text">
-              まだまだ 大阪！<br />
               れねの地元 天王寺 に遊びに行ったよ<br />
               はじめてのふたりのクリスマス<br />
               一緒に買ったオーナメントは宝物だね
             </div>
           </div>
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/18.jpg" alt="" />
+        </li>
+        <li class="scroll_rigt">
+          <img class="image" src="./img/19.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/20.jpg" alt="" />
+        </li>
+        <li class="scroll_rigt">
+          <img class="image" src="./img/21.jpg" alt="" />
+        </li>
+        <li class="scroll_left">
+          <img class="image" src="./img/22.jpg" alt="" />
         </li>
       </ul>
 
