--- a/index.html
+++ b/index.html
@@ -224,6 +224,30 @@
           </div>
         </li>
       </ul>
+
+      <ul id="polaroids">
+        <li>
+          <a
+            ><img src="./img/1.jpg" alt="" />
+            <p>テスト</p></a
+          >
+        </li>
+        <li>
+          <a><img src="./img/1.jpg" alt="" /></a>
+        </li>
+        <li>
+          <a><img src="./img/1.jpg" alt="" /></a>
+        </li>
+        <li>
+          <a><img src="./img/1.jpg" alt="" /></a>
+        </li>
+        <li>
+          <a><img src="./img/1.jpg" alt="" /></a>
+        </li>
+        <li>
+          <a><img src="./img/1.jpg" alt="" /></a>
+        </li>
+      </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./script.js"></script>
