--- a/index.html
+++ b/index.html
@@ -13,201 +13,306 @@
         <img src="./img/Top.jpg" alt="Circular Image" class="circle-image" />
       </div>
 
-      <div class="prologue">
-        <ul class="img_box">
-          <li class="scroll_up">
-            <div class="msg_box">
-              <!-- <div class="msg_box-title">
-                <h2>Let's start!!</h2>
-              </div> -->
-              <div class="msg_text">
-                お誕生日おめでとう!!;<br />
-                れねがアルバム作ってくれたから<br />
-                得意なもので作ってみたの &#x1f970;<br />
-                喜んでくれるかな？？
-              </div>
-            </div>
-          </li>
-          <li class="scroll_up">
-            <h1>Let's start!!</h1>
-          </li>
-        </ul>
-      </div>
-
       <ul class="img_box">
         <li class="scroll_right">
           <img class="image" src="./img/1.jpg" alt="" />
         </li>
         <li class="scroll_up">
           <div class="msg_box">
+            <div class="msg_title">お誕生日おめでとう！</div>
             <div class="msg_text">
-              れねと一緒にいてよかったことは<br />
-              おいしいたべものを<br />
-              たくさんたべれること！<br />
-              なんて素敵な居酒屋なのだ<br />
-              また一緒に行こうね！
+              れねがアルバム作ってくれたから<br />
+              得意なもので作ってみたの &#x1f970;<br />
+              喜んでくれるかな？？
             </div>
           </div>
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/2.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/3.jpg" alt="" />
         </li>
       </ul>
 
       <ul class="img_box">
         <li class="scroll_up">
+          <h1>Let's start!!</h1>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_left">
+          <img class="image" src="./img/17.jpg" alt="" />
+        </li>
+        <li class="scroll_right"><h1>Namba</h1></li>
+      </ul>
+
+      <ul id="polaroids">
+        <li class="scroll_left">
+          <a><img class="image" src="./img/34.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/sleep_3.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/90.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_up">
           <div class="msg_box">
+            <div class="msg_title">れねと一緒にいると</div>
             <div class="msg_text">
-              ここは ふたりのおきにいり？<br />
+              おいしいたべものを<br />
+              たくさんたべれる!!<br />
+              なんて素敵な居酒屋なのだ<br />
+              また一緒に行こうね
+            </div>
+          </div>
+        </li>
+
+        <li class="scroll_left">
+          <a><img class="image" src="./img/2.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/3.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">お気に入りのおみせ</div>
+            <div class="msg_text">
               写真を見るだけで<br />
               よだれが出ちゃう...<br />
-              なんばの街が恋しいね<br />
+            </div>
+          </div>
+        </li>
+
+        <li class="scroll_right">
+          <a><img class="image" src="./img/7.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a> <img class="image" src="./img/4.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a> <img class="image" src="./img/19.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a> <img class="image" src="./img/6.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a> <img class="image" src="./img/5.jpg" alt="" /></a>
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">居酒屋メニューNo.1</div>
+            <div class="msg_text">
+              するめの天ぷら食べたい...<br />
               れねの変な写真も好きなんだ笑
             </div>
           </div>
         </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/4.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/5.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/6.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/7.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/8.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/9.jpg" alt="" />
-        </li>
-      </ul>
 
-      <ul class="img_box">
+        <li class="scroll_left">
+          <a> <img class="image" src="./img/8.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/9.jpg" alt="" /></a>
+        </li>
+
         <li class="scroll_up">
           <div class="msg_box">
+            <div class="msg_title">まだまだ難波</div>
             <div class="msg_text">
-              まだまだ 難波！<br />
-              本当においしいお店がたっくさん<br />
-              帰るはずだったのに，プルコギ食べて<br />
-              帰れなくなったよね...<br />
-              でも，おいしかったからヨシ!!
+              本当においしいものがいっぱい!<br />
+              なんばの街が恋しいね
+            </div>
+          </div>
+        </li>
+
+        <li class="scroll_right">
+          <a><img class="image" src="./img/10.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/11.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/14.jpg" alt="" /></a>
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">並んで食べたよ</div>
+            <div class="msg_text">
+              安くておいしいお寿司屋も<br />
+              お茶は"あがり"っていうのか...<br />
+              れねに教えてもらったの
             </div>
           </div>
         </li>
         <li class="scroll_right">
-          <img class="image" src="./img/10.jpg" alt="" />
+          <a><img class="image" src="./img/12.jpg" alt="" /></a>
         </li>
         <li class="scroll_left">
-          <img class="image" src="./img/11.jpg" alt="" />
+          <a><img class="image" src="./img/13.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/18.jpg" alt="" /></a>
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">プルコギ</div>
+            <div class="msg_text">
+              帰るはずだったのに...<br />
+              おいしかったからヨシ!!
+            </div>
+          </div>
+        </li>
+
+        <li class="scroll_left">
+          <a><img class="image" src="./img/15.jpg" alt="" /></a>
         </li>
         <li class="scroll_right">
-          <img class="image" src="./img/12.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/13.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/14.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/15.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/16.jpg" alt="" />
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/17.jpg" alt="" />
+          <a> <img class="image" src="./img/16.jpg" alt="" /></a>
         </li>
       </ul>
 
       <ul class="img_box">
-        <li class="scroll_up">
-          <div class="msg_box">
-            <div class="msg_text">
-              れねの地元 天王寺 に遊びに行ったよ<br />
-              はじめてのふたりのクリスマス<br />
-              一緒に買ったオーナメントは宝物だね
-            </div>
-          </div>
-        </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/18.jpg" alt="" />
-        </li>
-        <li class="scroll_rigt">
-          <img class="image" src="./img/19.jpg" alt="" />
-        </li>
         <li class="scroll_left">
           <img class="image" src="./img/20.jpg" alt="" />
         </li>
-        <li class="scroll_rigt">
-          <img class="image" src="./img/21.jpg" alt="" />
+        <li class="scroll_right"><h1>Tennoji</h1></li>
+      </ul>
+
+      <ul id="polaroids">
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">れねの大切な場所</div>
+            <div class="msg_text">
+              天王寺 に遊びに行ったよ<br />
+              はじめてのふたりのクリスマス<br />
+              れねの写真はお気に入りの１枚
+            </div>
+          </div>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/21.jpg" alt="" /></a>
         </li>
         <li class="scroll_left">
-          <img class="image" src="./img/22.jpg" alt="" />
+          <a><img class="image" src="./img/22.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/23.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/24.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">れねの大切な人</div>
+            <div class="msg_text">
+              れねの家族に会ったよ<br />
+              いつか本当に<br />家族になれたらうれしいな<br />
+              おれの家族に会ってもらわなきゃ
+            </div>
+          </div>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/25.jpg" alt="" /></a>
         </li>
       </ul>
 
       <ul class="img_box">
         <li class="scroll_left">
-          <img class="image" src="./img/food_7.jpg" alt="" />
+          <img class="image" src="./img/30.jpg" alt="" />
         </li>
-        <li class="scroll_left">
-          <img class="image" src="./img/1shot_4.jpg" alt="" />
-        </li>
-        <li class="scroll_right">
-          <img class="image" src="./img/food_8.jpg" alt="" />
-        </li>
+        <li class="scroll_right"><h1>Kyoto</h1></li>
+      </ul>
 
+      <ul id="polaroids">
         <li class="scroll_up">
           <div class="msg_box">
+            <div class="msg_title">京都で下宿</div>
             <div class="msg_text">
-              お次は 京都!!<br />
               半年間の下宿だったけど<br />
               たくさん遊びに来てくれたね<br />
+              大学での研究も<br />応援してくれたから頑張れたよ<br />
               われらの第二の故郷だ<br />
             </div>
           </div>
         </li>
-      </ul>
-
-      <ul class="img_box">
         <li class="scroll_right">
-          <img class="image" src="./img/sleep_1.jpg" alt="" />
+          <a><img class="image" src="./img/31.jpg" alt="" /></a>
         </li>
         <li class="scroll_left">
-          <img class="image" src="./img/sleep_2.jpg" alt="" />
+          <a><img class="image" src="./img/32.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/33.jpg" alt="" /></a>
         </li>
 
         <li class="scroll_up">
           <div class="msg_box">
+            <div class="msg_title">布団から出ない...</div>
             <div class="msg_text">
               このときは 極寒の中<br />
               おれが洗濯してたよね...<br />
-              あなたは布団から出なかった...
             </div>
           </div>
         </li>
-      </ul>
-
-      <ul class="img_box">
-        <li class="scroll_left">
-          <img class="image" src="./img/2shot_6.jpg" alt="" />
+        <li class="scroll_right">
+          <a><img class="image" src="./img/35.jpg" alt="" /></a>
         </li>
         <li class="scroll_left">
-          <img class="image" src="./img/2shot_2.jpg" alt="" />
+          <a><img class="image" src="./img/36.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/37.jpg" alt="" /></a>
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">京都グルメ</div>
+            <div class="msg_text">
+              最高の料理の腕があったのに<br />
+              もう作れない...
+            </div>
+          </div>
+        </li>
+
+        <li class="scroll_right">
+          <a><img class="image" src="./img/39.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/40.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/41.jpg" alt="" /></a>
         </li>
         <li class="scroll_right">
-          <img class="image" src="./img/2shot_3.jpg" alt="" />
+          <a><img class="image" src="./img/42.jpg" alt="" /></a>
         </li>
         <li class="scroll_left">
-          <img class="image" src="./img/4shot_4.jpg" alt="" />
+          <a><img class="image" src="./img/43.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/44.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/45.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/46.jpg" alt="" /></a>
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">おうちグルメ</div>
+            <div class="msg_text">
+              最高の料理の腕があったのに<br />
+              もう作れない...
+            </div>
+          </div>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/47.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/48.jpg" alt="" /></a>
         </li>
 
         <li class="scroll_up">
@@ -218,34 +323,20 @@
               じつは嬉しかったのだよ<br />
               たくさんの友達に<br />
               会ってくれてありがとう<br />
-              意外とこのときの2人の写真<br />
-              多いんだよな &#x1f618;
             </div>
           </div>
         </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/49.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/50.jpg" alt="" /></a>
+        </li>
       </ul>
 
-      <ul id="polaroids">
-        <li>
-          <a
-            ><img src="./img/1.jpg" alt="" />
-            <p>テスト</p></a
-          >
-        </li>
-        <li>
-          <a><img src="./img/1.jpg" alt="" /></a>
-        </li>
-        <li>
-          <a><img src="./img/1.jpg" alt="" /></a>
-        </li>
-        <li>
-          <a><img src="./img/1.jpg" alt="" /></a>
-        </li>
-        <li>
-          <a><img src="./img/1.jpg" alt="" /></a>
-        </li>
-        <li>
-          <a><img src="./img/1.jpg" alt="" /></a>
+      <ul class="img_box">
+        <li class="scroll_up">
+          <h1>Fin.</h1>
         </li>
       </ul>
     </main>
