--- a/index.html
+++ b/index.html
@@ -173,6 +173,38 @@
 
       <ul class="img_box">
         <li class="scroll_left">
+          <img class="image" src="./img/Nara_title.JPG" alt="" />
+        </li>
+        <li class="scroll_right"><h1>Nara</h1></li>
+      </ul>
+
+      <ul id="polaroids">
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">レンタカーを借りて</div>
+            <div class="msg_text">
+              初めてといっていい？<br />
+              くらいの遠くへお出かけ<br />
+              時間もお金もなくてごめんね<br />
+            </div>
+          </div>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/Nara_1.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/Nara_2.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/Nara_3.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/Nara_4.jpg" alt="" /></a>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_left">
           <img class="image" src="./img/20.jpg" alt="" />
         </li>
         <li class="scroll_right"><h1>Tennoji</h1></li>
@@ -268,8 +300,10 @@
           <div class="msg_box">
             <div class="msg_title">京都グルメ</div>
             <div class="msg_text">
-              最高の料理の腕があったのに<br />
-              もう作れない...
+              京都でもたくさんおいしいものを<br />
+              食べに行ったよ<br />
+              そういえば，ふたりで行きたい<br />
+              ラーメン屋があるんだ
             </div>
           </div>
         </li>
@@ -298,6 +332,15 @@
         <li class="scroll_left">
           <a><img class="image" src="./img/46.jpg" alt="" /></a>
         </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/51.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/52.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/53.jpg" alt="" /></a>
+        </li>
 
         <li class="scroll_up">
           <div class="msg_box">
@@ -317,10 +360,10 @@
 
         <li class="scroll_up">
           <div class="msg_box">
+            <div class="msg_title">大学院の卒業式</div>
             <div class="msg_text">
-              卒業式にも来てくれた!<br />
               研究室の友達に見つかったけど<br />
-              じつは嬉しかったのだよ<br />
+              じつは嬉しかったよ<br />
               たくさんの友達に<br />
               会ってくれてありがとう<br />
             </div>
@@ -335,6 +378,171 @@
       </ul>
 
       <ul class="img_box">
+        <li class="scroll_left">
+          <a><img class="image" src="./img/61.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_up">
+          <h1>Working</h1>
+        </li>
+      </ul>
+
+      <ul id="polaroids">
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">ついに２人とも社会人？</div>
+            <div class="msg_text">
+              おれは新社会人として愛知へ<br />
+              れねは新天地探しに奮闘<br />
+              とっても大変だったけど<br />
+              たくさん成長した半年だったね
+            </div>
+          </div>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s1.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s5.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s2.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s3.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s4.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s6.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s7.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s8.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s9.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s10.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s18.jpg" alt="" /></a>
+        </li>
+
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">れねがくれたプレゼント</div>
+            <div class="msg_text">
+              誕生日にくれた手作りアルバム<br />
+              人生で一番うれしいプレゼント<br />
+              これを見ると元気が出るよ<br />
+              ありがとう！！
+            </div>
+          </div>
+        </li>
+
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s11.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s12.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s13.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s14.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s15.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s16.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">おわりのはじまり</div>
+            <div class="msg_text">
+              このコのおかげで<br />
+              UFOキャッチャーブーム到来<br />
+              このときみたいに<br />
+              全然取れないんですけど!!
+            </div>
+          </div>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s17.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s19.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">お盆の旅行</div>
+            <div class="msg_text">
+              伊勢神宮へお参り<br />
+              れねは何をお願いしたんだろう...<br />
+              お仕事が決まった時は<br />
+              本当に本当にうれしかった！！
+            </div>
+          </div>
+        </li>
+
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s23.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s20.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/s21.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/s22.jpg" alt="" /></a>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_left">
+          <a><img class="image" src="./img/a1.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_up">
+          <h1>Aichi</h1>
+        </li>
+      </ul>
+
+      <ul id="polaroids">
+        <li class="scroll_up">
+          <div class="msg_box">
+            <div class="msg_title">愛知上陸</div>
+            <div class="msg_text">
+              れねが愛知に来てくれた<br />
+              一緒に過ごせる時間が増えて<br />
+              とっても嬉しいよ
+            </div>
+          </div>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/a2.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/a3.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_right">
+          <a><img class="image" src="./img/a4.jpg" alt="" /></a>
+        </li>
+        <li class="scroll_left">
+          <a><img class="image" src="./img/a5.jpg" alt="" /></a>
+        </li>
+      </ul>
+
+      <ul class="img_box">
+        <li class="scroll_left">
+          <a><img class="image" src="./img/fin.jpg" alt="" /></a>
+        </li>
         <li class="scroll_up">
           <h1>Fin.</h1>
         </li>
