--- a/photo.html
+++ b/photo.html
@@ -481,7 +481,7 @@
             <div class="msg_title">お盆の旅行</div>
             <div class="msg_text">
               伊勢神宮へお参り<br />
-              れねは何をお願いしたんだろう...<br />
+              れねは何をお願いしたんだろ<br />
               お仕事が決まった時は<br />
               本当に本当にうれしかった！！
             </div>
