--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             </div>
             <h3>Rene</h3>
             <p>27歳</p>
+            <p></p>
+            <p>FCRE：ちゃっかりうさぎ</p>
           </div>
 
           <div class="member-card">
@@ -68,8 +70,8 @@
             </div>
             <h3>Masatsugu</h3>
             <p>26歳</p>
-            <p>プランナー</p>
-            <p>運転手</p>
+            <p>EMFP-A：運動家</p>
+            <p>FAPE：最後の恋人</p>
           </div>
         </div>
       </section>
@@ -117,19 +119,6 @@
         </ul>
       </section>
 
-      <section class="page photo-section">
-        <h1>Photo</h1>
-        <a
-          href="[ここにGoogleフォトの共有アルバムURLを貼る]"
-          target="_blank"
-          class="photo-button"
-        >
-          思い出のアルバムを開く
-        </a>
-
-        <p class="print-only">（このページは印刷されません）</p>
-      </section>
-
       <section class="page memo-section">
         <h2>MEMO &amp; LIST</h2>
 
@@ -153,6 +142,19 @@
         <ul class="contact-list">
           <li>変なホテル 西葛西：080-5894-3770</li>
         </ul>
+      </section>
+
+      <section class="page photo-section">
+        <h1>Photo</h1>
+        <a
+          href="[ここにGoogleフォトの共有アルバムURLを貼る]"
+          target="_blank"
+          class="photo-button"
+        >
+          思い出のアルバムを開く
+        </a>
+
+        <p class="print-only">（このページは印刷されません）</p>
       </section>
     </div>
     <script src="script.js"></script>
