--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Her Birthday Trip</title>
+    <title>Birthday Trip 2025</title>
     <link rel="stylesheet" href="style.css" />
 
     <!-- フォント -->
@@ -48,6 +48,9 @@
         <h1>Rene's<br />Birthday Trip</h1>
         <p class="date">2025.12.13 - 2025.12.10</p>
         <p class="destination">Tokyo Disney Resort</p>
+        <div class="space"></div>
+        <p>===お詫び===</p>
+        <p>※まだまだ工事中です。随時、内容を更新します</p>
       </section>
 
       <section class="page member-section">
@@ -61,7 +64,6 @@
             <h3>Rene</h3>
             <p>27歳</p>
             <p></p>
-            <p>FCRE：ちゃっかりうさぎ</p>
           </div>
 
           <div class="member-card">
@@ -70,8 +72,6 @@
             </div>
             <h3>Masatsugu</h3>
             <p>26歳</p>
-            <p>EMFP-A：運動家</p>
-            <p>FAPE：最後の恋人</p>
           </div>
         </div>
       </section>
@@ -85,8 +85,9 @@
           <li><strong>08:30 スタバ 東別院店 </strong> ホットドリンクをGET☕</li>
           <li><strong>09:00 名古屋→東京</strong> クルマの中でカラオケ大会🎤</li>
           <li><strong>12:00 ランチ🍴</strong></li>
-          <li><strong>18:00 ディナー🍽️</strong></li>
-          <li><strong>19:30 イルミネーション🎄</strong></li>
+          <li><strong>13:00 （ブラン検討中）</strong>どこいこっかな</li>
+          <li><strong>18:00 ディナー🍽️</strong>お楽しみ...</li>
+          <li><strong>19:30 イルミネーション🎄</strong>お楽しみ...</li>
           <li><strong>21:00 変なホテル 西葛西 </strong> ホテル到着</li>
           <li><strong>23:00 就寝🛏</strong></li>
         </ul>
@@ -102,7 +103,7 @@
           </li>
           <li><strong>07:30 ゲート 到着</strong>寒いけど並ぶよ カイロ必須🔥</li>
           <li><strong>09:00 入場!!🐭</strong> いざ夢の国へ</li>
-          <li><strong>12:00 ランチ🍴</strong></li>
+          <li><strong>12:00 ランチ🍴</strong> ディズニーシー内のお店を予約</li>
           <li>
             <strong>20:00 お土産購入🎁</strong>クルマだからって買いすぎ注意!!
           </li>
@@ -144,18 +145,16 @@
         </ul>
       </section>
 
-      <section class="page photo-section">
+      <!-- <section class="page photo-section">
         <h1>Photo</h1>
         <a
           href="[ここにGoogleフォトの共有アルバムURLを貼る]"
           target="_blank"
           class="photo-button"
         >
-          思い出のアルバムを開く
+          思い出のアルバムを開く（工事中）
         </a>
-
-        <p class="print-only">（このページは印刷されません）</p>
-      </section>
+      </section> -->
     </div>
     <script src="script.js"></script>
   </body>
